# CarScout-AI

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CHANNEL-SETUP-INSTRUCTIONS.md  COMMIT_MESSAGE.md  ENV-SETUP-GUIDE.md  IMPLEMENTATION-SUMMARY.md  INFRASTRUCTURE.md  LICENSE  MOBILE-BG-QUICK-REF.md  Makefile  NEXT-STEPS-CHANNELS.md  PIPELINE-DEBUG.md  PROJECT-SRUCTURE.md  PROJECT-STRUCTURE-SUMMARY.md  PROJECT-VISUALIZATION.md  QUICK-START.md  QUICKSTART.md  README.md  SEEDING-GUIDE.md  SEEDING-STATUS-REPORT.md  SETUP-COMPLETE.md  STATUS.md  TELEGRAM-ARCHITECTURE.md  TELEGRAM-QUICKSTART.md  TELEGRAM-SETUP.md  TESTING-FLOW.md  TESTING-QUICK-REF.md  TESTING-README.md  TESTING.md  WORK-FROM-HOME.md  alembic.ini  alert.sh  brand_model_analysis.json  cars_bg_config_worker_5.json  celery.sh  daily_report.sh  deal_monitor_config.json  docker-compose.yml  (+23 more)
configs/: __init__.py  settings.py
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  MOBILE-BG-AUTH-IMPLEMENTATION.md  MOBILE-BG-AUTH-SETUP.md  MOBILE-BG-SCRAPING-STATUS.md  PRICE_FIX.md
libs/: __init__.py
migrations/: env.py
scripts/: add_parsed_data_column.py  add_raw_html_column.py  analyze_brand_models.py  analyze_filters.py  analyze_html.py  analyze_login_html.py  check_bot_privacy.py  check_comparables.py  check_db.py  check_duplicates.py  check_listings.py  check_mobile_bg_feeds.py  check_parsed_data.py  check_pipeline_activity.py  check_progress.py  check_recent_processing.py  check_scores.py  check_spider_data.py  cleanup_unusable.py  clear_cache.py  clear_celery_queue.py  debug_extraction.py  debug_lamborghini_price.py  debug_login_form.py  debug_login_selector.py  debug_mobile_bg.py  debug_normalize.py  demo_scoring.py  dev_setup.sh  diagnose_bot.py  diagnose_celery.py  discover_channels.py  extract_models.py  find_listing_selectors.py  fix_brand_model_from_spider_data.py  generate_brand_config.py  generate_hybrid_config.py  get_channel_ids.py  (+65 more)
(+63 files in other folders)
